# Yale-OpenHand-Workshop-2018

ROS/src/openhand/: CMakeLists.txt
ROS/src/openhand/nodes/: openhandNode.py
ROS/src/openhand/src/openhand/: hands.py  lib_robotis_mod.py
ROS/src/openhand/srv/: PoseHand.srv
ROS/src/projects/posable/: CMakeLists.txt  package.xml
ROS/src/projects/posable/launch/: posable.launch
ROS/src/projects/posable/param/: params.yaml
