<?xml version="1.0"?>
<package>
  <name>posable</name>
  <version>1.0.0</version>
  <description>Posable hand</description>
  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>
  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
